Adding module-info, but keeping comptatibilty with Java 8, so it's now a multi-release jar